# jira-sync

./: .gitignore  .jira.example.json  CLAUDE.md  README.md  __init__.py  __main__.py  cli.py  client.py  config.py  formatter.py  pyproject.toml  requirements.txt  sync.py
.claude/: settings.local.json
__specs__/: ARCHITECTURE.md  new-ops-create-add-set.md
admin/: commands.py
comment/: __init__.py  query.py
domains/: __init__.py
domains/admin/: __init__.py
domains/comment/: commands.py  types.py
domains/epic/: query.py
domains/jql/: commands.py  query.py
domains/project/: commands.py  query.py
domains/ticket/: query.py
epic/: __init__.py  commands.py  query.py
jira_sync/: .jira.example.json  __init__.py  cli.py  config.py
jira_sync/domains/admin/: commands.py
jira_sync/domains/comment/: commands.py  query.py
jira_sync/domains/epic/: commands.py
jira_sync/domains/jql/: __init__.py  commands.py
jira_sync/domains/project/: commands.py  query.py
jira_sync/domains/status/: commands.py  query.py  types.py
jira_sync/domains/ticket/: commands.py
jira_sync/domains/time/: commands.py
jira_sync/lib/: input_helpers.py
jql/: query.py
lib/: __init__.py  jira_client.py
project/: __init__.py  commands.py  query.py
status/: __init__.py  query.py
ticket/: __init__.py  query.py  types.py
